--- a/krishna.html
+++ b/krishna.html
@@ -66,9 +66,9 @@
     </header>
 
     <nav>
-        <a href="#about">About Me</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="#Home">About Me</a>
+        <a href="#Home">Projects</a>
+        <a href="#Home">Contact</a>
     </nav>
 
     <div class="container" id="about">
